--- a/package.json
+++ b/package.json
@@ -13,9 +13,12 @@
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@fontsource/roboto": "^5.2.5",
+    "@mui/icons-material": "^7.0.1",
     "@mui/material": "^7.0.1",
+    "@types/lodash-es": "^4.17.12",
     "axios": "^1.8.4",
     "dayjs": "^1.11.13",
+    "lodash-es": "^4.17.21",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router": "^7.5.0"
